# UAV_USV

./: .gitignore  COLLABORATION.md  README.md
.github/: CODEOWNERS  pull_request_template.md
docs/: INTERFACES.md  第一阶段五人并行开发任务书.md
src/uav_usv_bringup/: CMakeLists.txt  README.md  package.xml
src/uav_usv_bringup/config/: README.md
src/uav_usv_bringup/launch/: legacy_boat_nav2.launch.py  legacy_colregs_test.launch.py  legacy_px4_sim.launch.py
src/uav_usv_colregs/: CMakeLists.txt  README.md  package.xml
src/uav_usv_description/: CMakeLists.txt  README.md  package.xml
src/uav_usv_gazebo/: CMakeLists.txt  README.md  package.xml
src/uav_usv_interfaces/: CMakeLists.txt  package.xml
src/uav_usv_interfaces/msg/: AisContact.msg  AisContactArray.msg  CollisionRisk.msg  ColregsDecision.msg  TrackedObject.msg
src/uav_usv_localization/: CMakeLists.txt  README.md  package.xml
src/uav_usv_mission/: CMakeLists.txt  README.md  package.xml
src/uav_usv_navigation/: CMakeLists.txt  README.md  package.xml
src/uav_usv_perception/: CMakeLists.txt  README.md  package.xml
src/uav_usv_sim/: CMakeLists.txt  README.md  package.xml
src/uav_usv_sim/config/: boat_nav2_params.yaml  colregs_scenarios.yaml
src/uav_usv_sim/docs/: 复现运行指南.md  多源海事感知第一阶段.md
src/uav_usv_sim/launch/: boat_nav2_navigation.launch.py  colregs_test_scenario.launch.py  cooperative_lighthouse_mission.launch.py  rviz_goal_boat_tracking.launch.py  uav_usv_cooperation_demo.launch.py  uav_usv_px4_sim.launch.py  uav_usv_world_keyboard.launch.py
src/uav_usv_sim/models/medium_buoy/: model.config  model.sdf
src/uav_usv_sim/models/simple_boat/: model.config  model.sdf
src/uav_usv_sim/models/target_vessel/: model.config  model.sdf
src/uav_usv_sim/models/waves/: model.sdf
src/uav_usv_sim/plugins/: BoatWaveFollower.cc  DroneDeckFollower.cc
src/uav_usv_sim/rviz/: boat_front_camera.rviz  boat_nav2_navigation.rviz  colregs_test_scenario.rviz
src/uav_usv_sim/scripts/: ais_simulator.py  boat_nav2_interface.py  colregs_scenario_controller.py  cooperative_lighthouse_mission.py  keyboard_boat_control.py  maritime_tf_publisher.py  nav_goal_marker_relay.py  rviz_goal_boat_control.py
src/uav_usv_sim/tools/: run_gz_world.sh  sync_to_px4.sh
src/uav_usv_sim/urdf/: landing_boat.urdf.xacro
src/uav_usv_sim/worlds/: default.sdf
src/uav_usv_tests/: CMakeLists.txt  README.md  package.xml
src/uav_usv_uav_control/: CMakeLists.txt  README.md  package.xml
src/uav_usv_usv_control/: CMakeLists.txt  README.md  package.xml
tools/: check_workspace.sh
