<?xml version="1.0"?>
<package format="3">
  <name>uav_usv_bringup</name>
  <version>0.1.0</version>
  <description>Top-level launch and configuration package for integrated UAV-USV systems.</description>
  <maintainer email="team@example.com">UAV-USV Team</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>uav_usv_sim</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
