<?xml version="1.0"?>
<package format="3">
  <name>uav_usv_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo worlds, environmental models, sensors, and simulation plugins.</description>
  <maintainer email="team@example.com">UAV-USV Team</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>uav_usv_description</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
