<?xml version="1.0"?>
<package format="3">
  <name>uav_usv_mission</name>
  <version>0.1.0</version>
  <description>High-level UAV-USV cooperative mission and task management.</description>
  <maintainer email="team@example.com">UAV-USV Team</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>uav_usv_interfaces</exec_depend>
  <exec_depend>uav_usv_uav_control</exec_depend>
  <exec_depend>uav_usv_usv_control</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
