<?xml version="1.0"?>
<package format="3">
  <name>uav_usv_navigation</name>
  <version>0.1.0</version>
  <description>Nav2 configuration, planners, MPPI, costmaps, and maritime navigation adapters.</description>
  <maintainer email="team@example.com">UAV-USV Team</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_mppi_controller</exec_depend>
  <exec_depend>uav_usv_interfaces</exec_depend>
  <exec_depend>uav_usv_usv_control</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
