<?xml version="1.0"?>
<package format="3">
  <name>uav_usv_tests</name>
  <version>0.1.0</version>
  <description>Integration tests, scenario metrics, rosbag regressions, and launch smoke tests.</description>
  <maintainer email="team@example.com">UAV-USV Team</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch_testing</test_depend>
  <exec_depend>uav_usv_interfaces</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
